fixed space bar alignment

--- a/web/keyboard.css
+++ b/web/keyboard.css
@@ -7,7 +7,7 @@
 .ui-keyboard-button-endrow { clear: left; }
 .ui-keyboard-widekey { min-width: 4em; width: auto; }
 .ui-keyboard-space { width: 15em; }
-.ui-keyboard-space span, .ui-keyboard-empty span { font: 0/0 a; text-shadow: none; color: transparent; } /* see http://nicolasgallagher.com/another-css-image-replacement-technique/ */
+.ui-keyboard-space span, .ui-keyboard-empty span { text-shadow: none; color: transparent; } /* see http://nicolasgallagher.com/another-css-image-replacement-technique/ */
 .ui-keyboard-preview-wrapper { text-align: center; }
 .ui-keyboard-preview { text-align: left; margin: 0 0 3px 0; display: inline; width: 99%;} /* width is calculated in IE, since 99% = 99% full browser width =( */ 
 .ui-keyboard-keyset { text-align: center; white-space: nowrap; }
